<resources>
    <string name="app_name">My Application</string>
    <string name="register">Zarejestruj się</string>
    <string name="login">Zaloguj się</string>
    <string name="im_specialist"> Jestem specjalistą</string>
    <string name="login2">Login:</string>
    <string name="password">Hasło:</string>
    <string name="looking_specialist">Szukam specjalisty</string>
    <string name="password2"> Powtórz hasło:</string>
    <string name="next">Dalej</string>
    <string name="telephone">Telefon:</string>
    <string name="name">Imię:</string>
    <string name="surname">Nazwisko:</string>
    <string name="specialization">Specjalizacja:</string>
    <string name="save">Zapisz</string>
    <string name="company">Nazwa firmy:</string>
    <string name="description">Opis:</string>
    <string name="search">Wyszukaj specjalistę</string>
    <string name="search2">Szukaj</string>
    <string name="category">Wybierz kategorię</string>
    <string name="logout">Wyloguj się</string>
    <string name="user_services">Twoje usługi</string>
    <string name="maxprice">Maksymalny budżet</string>
    <string name="change_radius">Zmień promień usług</string>
    <string name="Request">Zamów usługę u</string>
    <string name="rate">Oceń usługę u</string>
    <string name="Send">Wyślij</string>
    <string name="activity_desc">Szczegóły usługi</string>
    <string name="opinions">Opinie</string>
    <string name="activities">Twoje usługi</string>
    <string name="rate2">Komentarz do opinii</string>
    <string name="cancel">Anuluj</string>
    <string name="accept">Akceptuj</string>
    <string name="dismiss">Odrzuć</string>
    <string name="req">Wyślij zgłoszenie</string>
    <string name="rating">Pokaż opinie</string>
    <string name="end">Zakończ</string>

</resources>