<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendRequestActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline70"
            app:layout_constraintEnd_toStartOf="@+id/guideline68"
            app:layout_constraintStart_toStartOf="@+id/guideline66"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/activity_desc"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline72"
            app:layout_constraintEnd_toStartOf="@+id/guideline68"
            app:layout_constraintStart_toStartOf="@+id/guideline66"
            app:layout_constraintTop_toTopOf="@+id/guideline71" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline69"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.21" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.31" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.76" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.74" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline76"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.82" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline78"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Request"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline69"
            app:layout_constraintEnd_toStartOf="@+id/guideline68"
            app:layout_constraintStart_toStartOf="@+id/guideline66"
            app:layout_constraintTop_toTopOf="@+id/guideline67" />

        <Button
            android:id="@+id/button15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#8FCF3E"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Send"
            app:layout_constraintBottom_toTopOf="@+id/guideline78"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline77" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline74"
            app:layout_constraintEnd_toStartOf="@+id/guideline68"
            app:layout_constraintStart_toStartOf="@+id/guideline66"
            app:layout_constraintTop_toTopOf="@+id/guideline73">

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:gravity="top"
                android:inputType="text|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/user_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button15"
            app:menu="@menu/user_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>